Updated file for testing and rename FamilyTaksController to represent person only instead of the whole software