@@ -56,16 +56,54 @@ dependencies {
 	compile 'javax.servlet:jsp-api:2.0'	
 	compile 'javax.servlet:jstl:1.2'			
 
-	//compile 'javax.servlet:jstl:1.2'
 	compile 'org.springframework:spring-tx:4.1.6.RELEASE'
-//    compile("org.springframework.boot:spring-boot-starter-thymeleaf")
-//	  compile 'org.springframework.boot:spring-boot-starter-web'
-//    compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.1.4.RELEASE'
-//    compile 'javax.servlet:javax.servlet-api:3.1.0'
-//    compile 'org.slf4j:slf4j-simple:1.7.7'
-//    compile 'org.javassist:javassist:3.15.0-GA'
+
     compile 'mysql:mysql-connector-java:5.1.31'
-    testCompile("junit:junit")
+    testCompile("junit:junit:4.11")
+    testCompile('org.mockito:mockito-all:1.9.5')
+    testCompile('org.springframework:spring-test:4.1.6.RELEASE')
+    testCompile('org.hamcrest:hamcrest-core:1.3')
+    testCompile('org.hamcrest:hamcrest-library:1.3')
+}
+
+// add a new unitTest sourceSet
+sourceSets {
+    test {
+    	java {
+        	//srcDirs = ["tests/controller"]
+        	//resources.srcDir file('src/test/resources')
+    	}
+    }
+}
+
+test {
+
+  // set a system property for the test JVM(s)
+  //systemProperty 'some.prop', 'value'
+
+  // explicitly include or exclude tests
+  include 'src/tests/controller/**'
+  //exclude 'org/boo/**'
+
+  // show standard out and standard error of the test JVM(s) on the console
+  testLogging.showStandardStreams = true
+
+  // set heap size for the test JVM(s)
+  minHeapSize = "128m"
+  maxHeapSize = "512m"
+
+  // set JVM arguments for the test JVM(s)
+  jvmArgs '-XX:MaxPermSize=256m'
+
+  // listen to events in the test execution lifecycle
+  beforeTest { descriptor ->
+     logger.lifecycle("Running test: " + descriptor)
+  }
+
+  // listen to standard out and standard error of the test JVM(s)
+  onOutput { descriptor, event ->
+     logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message )
+  }
 }
 
 task publishDb(type: Exec) << {
